--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://www.grid22.com"
 
 # This is a "one page"-website, so we do not need these kinds of pages...
 disableKinds = ["section", "taxonomy", "term", "RSS", "robotsTXT", "404"]
@@ -9,7 +9,7 @@ defaultContentLanguage = "en"
 theme = "hugo-product-launch"
 
 # The "title" of your website
-title = "Builders Of The Future, Inc."
+title = "GRID22 INC"
 
 # Render line-breaks in .md-files as line-breaks in HTML.
 # This is e.g. useful for rendering a multi-line address.
@@ -21,7 +21,7 @@ title = "Builders Of The Future, Inc."
 [params]
     # A "copyright"-line to be added at the bottom of the page.
     # Hint: Markdown is supported in here as well. So you may e.g. add a link to your legal imprint-page.
-    copyright = "© Builders Of The Future, Inc."
+    copyright = "© 2018-2020 GRID22 INC"
 
     # The "description" of your website. This is used in the meta data of your generated html.
     description = "You don't even know what we can do for you!"
@@ -51,4 +51,4 @@ title = "Builders Of The Future, Inc."
     # hidedesignbyline = true
 
     [params.meta]
-        keywords = "some, keywords, for, seo, you, know, google, duckduckgo, and, such"
+        keywords = "development, contract, jot, grid22, elixir, erlang, ios"
